# learning-based-lpbf-thermal-design

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  folderstruct.graphql  main.py  pyproject.toml  pyright_output.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  wiki-sync.yml
datagenerator/: single_dot.py  state.py  stepper.py
docs/: Home.md  _Sidebar.md  artifacts_and_reports.md  benchmarks.md  diagnostics_metrics.md  experiment_design.md  formulation.md  gpu_optimization_guide.md  hpo_optimization_state.md  mlflow_backend.md  offline_dataset_generation.md  physics.md  relobralo_strategy.md  resolution_trap_strategy.md  tracking_architecture.md  usage.md
docs/materials/: 17_4ph.md  al6061.md  alsi10mg.md  cp_ti.md  h13.md  in625.md  in718.md  index.md  maraging.md  ss304.md  ss316l.md  ti64.md
experiments/: benchmark_solver.py  compare_fidelity.py  hatch_pattern.py  material_comparison.py  ref_multi_hatch.py  run_2d.py  run_3d.py  ss316l_cooling_hatch.py  ss316l_multi_hatch.py  stateful_stepping.py  stateful_time_resolved.py  train_fm.py
notebooks/: 00_guide.ipynb  01_view_states.ipynb  02_verify_physics_and_viz.ipynb  03_material_comparison.ipynb  04_surrogate_training.ipynb  99_dataset_runner.ipynb
physics/: material.py  operators.py
scan/: dots.py  heat_source.py
schemas/: state.py
scripts/: compare_methods.py  train_fm.py
scripts/configs/: fm_default.yaml
src/lpbf/: config.py  dev_scripts.py  state.py  units.py
src/lpbf/core/: config.py  state.py
src/lpbf/integrator/: stepper.py
src/lpbf/physics/: constants.py  material.py  ops.py
src/lpbf/scan/: engine.py  sources.py
src/lpbf/utils/: grid.py  io.py  state_recorder.py  units.py
src/lpbf/viz/: dashboard.py  interactive.py  static.py
src/neural_pbf/: dev_scripts.py
src/neural_pbf/core/: config.py  state.py
src/neural_pbf/data/: diagnostics.py  fm_dataset.py  hdf5_dataset.py  sampling.py
src/neural_pbf/diagnostics/: energy.py  recorder.py
src/neural_pbf/integrator/: fm_stepper.py  stepper.py
src/neural_pbf/models/: __init__.py  config.py  loss.py  replay_buffer.py  surrogate.py
src/neural_pbf/models/generative/fm/: __init__.py  conditioning.py  config.py  embeddings.py  flow.py  velocity_net.py
src/neural_pbf/physics/: material.py  ops.py  triton_ops.py
src/neural_pbf/pipelines/: __init__.py  dataset.py  grids.py  training_pipeline.py
src/neural_pbf/scan/: engine.py  path_generator.py  sources.py
src/neural_pbf/schemas/: artifacts.py  diagnostics.py  instrumentation.py  run_meta.py  state.py  tracking.py
src/neural_pbf/tracking/: __init__.py  base.py  factory.py  run_context.py
src/neural_pbf/tracking/backends/: mlflow_backend.py
src/neural_pbf/tracking/instrumentation/: __init__.py  _optional_deps.py  flight_recorder.py  progress_reporter.py  system_monitor.py
src/neural_pbf/utils/: io.py  profiling.py  state_recorder.py  units.py
src/neural_pbf/viz/: artifacts_base.py  dashboard.py  interactive.py  plots.py  static.py  temperature_artifacts.py
tests/: test_dataset_diagnostics_integration.py  test_diagnostics.py  test_diagnostics_profiler.py  test_mlflow_tracker.py  test_run_context.py  test_sampling.py  test_stepper_substeps.py  test_tracking_factory.py
tests/core/: test_state_zeros.py
tests/data/: test_hdf5_dataset.py
tests/integrator/: test_stepper_device_assert.py
tests/lpbf/: test_adaptive_physics.py  test_fm_dataset.py  test_fm_flow.py  test_fm_stepper.py  test_fm_velocity_net.py  test_integration.py  test_integrator.py  test_physics.py  test_plots_coordinate_system.py  test_scan.py  test_units_and_physics.py  test_viz.py
tests/models/: test_config.py  test_loss.py  test_replay_buffer.py  test_surrogate.py  test_training_integration.py
tests/physics/: test_triton_dynamic_phase.py  test_triton_ops_fixes.py
tests/pipelines/: test_dataset_prepare_trajectory.py  test_grids.py  test_training_pipeline.py
tests/scan/: test_path_generator.py
tests/tracking/: test_flight_recorder.py  test_system_monitor.py
utils/: CUDA_check.py  history.py  install_pth.py  state_recorder.py  viz.py
