[project]
name = "learning-based-lpbf-thermal-design"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash>=3.3.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.6",
    "mlflow>=3.8.1",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pydantic>=2.11.9",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]

[project.scripts]
lint = "lpbf.dev_scripts:lint"
format = "lpbf.dev_scripts:format"
typecheck = "lpbf.dev_scripts:typecheck"
test = "lpbf.dev_scripts:test"

[dependency-groups]
dev = [
    "black>=25.12.0",  # Keeping black if needed, but ruff format is preferred
    "mypy>=1.19.1",    # Keeping mypy just in case, but pyright is primary
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "pyright>=1.1.300",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__", "legacy", "experiments", "notebooks"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
[filterwarnings]
ignore = [
    "ignore::DeprecationWarning",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lpbf"]
